--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -4,6 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
-<p>@Model.Id</p>
+<h1>@Model.Name</h1>
+<ul>
+    <li>@Model.MembershipType.Name</li>
+    @if (Model.BirthDate.HasValue)
+    {
+        <li>@( Model.BirthDate.Value.ToShortDateString())</li>
 
+    }
+</ul>
