--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -4,19 +4,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Movies</h2>
-<div class="container  col-lg-12">
-<table class="table table-striped ">
+<h2> Movies</h2>
+<div class="container  col-md-12 bottom-buffer">
+
+@Html.ActionLink("New Movie", "New", null,new { @class="btn btn-success"})
+    </div>
+<div class="container  col-md-12">
+<table class="table  table-bordered table-hover ">
     <thead>
-        <tr><th>Movies</th></tr>
-        <tr><th>Genre</th></tr>
+        <tr><th>Movies</th>
+        <th>Genre</th></tr>
     </thead>
     @foreach (var movie in Model.Movies)
     {
         <tbody>
     <tr>
         <td>
-            @Html.ActionLink(movie.Name, "Details", "Movies",new { movie.Id},null)
+            @Html.ActionLink(movie.Name, "Edit", "Movies",new { movie.Id},null)
         </td>
         <td>@movie.Genre.Name</td>
     </tr>
