--- a/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Views/Movies/MovieForm.cshtml
@@ -17,12 +17,12 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.ReleaseDate)
-        @Html.TextBoxFor(m => m.ReleaseDate, "{0:dd/MM/yyyy}", new { @class = "datefield form-control" })
+        @Html.TextBoxFor(m => m.ReleaseDate, "{0:yyyy-MM-dd}", new { @class = "datefield form-control" })
         @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.DateAdded)
-        @Html.EditorFor(m => m.DateAdded,new { @class = "date-picker form-control" })
+        @Html.EditorFor(m => m.DateAdded,"{0:yyyy-MM-dd}",new { @class = "datefield form-control" })
         @Html.ValidationMessageFor(m => m.DateAdded)
     </div>
 
