--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Vidly</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/jquery-ui.min.css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/styles.css" rel="stylesheet" type="text/css" />
 
@@ -21,6 +22,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/jquery-ui.min.js")
+    @Scripts.Render("~/Scripts/DatePickerReady.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
